# pyothello

./: LICENSE  README.md  pyproject.toml
notebooks/: train_test.ipynb
src/pyothello/: learn.py  othello.py
src/pyothello/attic/attic1/: learn.py  othello.py
testing/: prof_test.py  train_test.py
